cmake_minimum_required(VERSION 3.14)
project(FromUndefinedToAny C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 11)

add_executable(ProgrammingInC_c03_e_01 ProgrammingInC/chapter03/example/example01.c)
add_executable(ProgrammingInC_c03_e_02 ProgrammingInC/chapter03/example/example02.c)
add_executable(ProgrammingInC_c03_e_03 ProgrammingInC/chapter03/example/example03.c)
add_executable(ProgrammingInC_c03_e_04 ProgrammingInC/chapter03/example/example04.c)
add_executable(ProgrammingInC_c03_e_05 ProgrammingInC/chapter03/example/example05.c)
add_executable(ProgrammingInC_c03_e_06 ProgrammingInC/chapter03/example/example06.c)
add_executable(ProgrammingInC_c03_p_02 ProgrammingInC/chapter03/practice/practice02.c)
add_executable(ProgrammingInC_c03_p_03 ProgrammingInC/chapter03/practice/practice03.c)
add_executable(ProgrammingInC_c03_p_04 ProgrammingInC/chapter03/practice/practice04.c)
add_executable(ProgrammingInC_c03_p_05 ProgrammingInC/chapter03/practice/practice05.c)
add_executable(ProgrammingInC_c03_p_06 ProgrammingInC/chapter03/practice/practice06.c)
add_executable(ProgrammingInC_c04_e_01 ProgrammingInC/chapter04/example/example01.c)
add_executable(ProgrammingInC_c04_e_02 ProgrammingInC/chapter04/example/example02.c)
add_executable(ProgrammingInC_c04_e_03 ProgrammingInC/chapter04/example/example03.c)
add_executable(ProgrammingInC_c04_e_04 ProgrammingInC/chapter04/example/example04.c)
add_executable(ProgrammingInC_c04_e_05 ProgrammingInC/chapter04/example/example05.c)
add_executable(ProgrammingInC_c04_p_04 ProgrammingInC/chapter04/practice/practice04.c)
add_executable(ProgrammingInC_c04_p_05 ProgrammingInC/chapter04/practice/practice05.c)
add_executable(ProgrammingInC_c04_p_06 ProgrammingInC/chapter04/practice/practice06.c)
add_executable(ProgrammingInC_c04_p_07 ProgrammingInC/chapter04/practice/practice07.c)
add_executable(ProgrammingInC_c04_p_08 ProgrammingInC/chapter04/practice/practice08.c)
add_executable(ProgrammingInC_c05_e_01 ProgrammingInC/chapter05/example/example01.c)
add_executable(ProgrammingInC_c05_e_02 ProgrammingInC/chapter05/example/example02.c)
add_executable(ProgrammingInC_c05_e_03 ProgrammingInC/chapter05/example/example03.c)
add_executable(ProgrammingInC_c05_e_04 ProgrammingInC/chapter05/example/example04.c)
add_executable(ProgrammingInC_c05_e_05 ProgrammingInC/chapter05/example/example05.c)
add_executable(ProgrammingInC_c05_e_06 ProgrammingInC/chapter05/example/example06.c)
add_executable(ProgrammingInC_c05_e_07 ProgrammingInC/chapter05/example/example07.c)
add_executable(ProgrammingInC_c05_e_08 ProgrammingInC/chapter05/example/example08.c)
add_executable(ProgrammingInC_c05_e_09 ProgrammingInC/chapter05/example/example09.c)
add_executable(ProgrammingInC_c05_p_02 ProgrammingInC/chapter05/practice/practice02.c)
add_executable(ProgrammingInC_c05_p_03 ProgrammingInC/chapter05/practice/practice03.c)
add_executable(ProgrammingInC_c05_p_04 ProgrammingInC/chapter05/practice/practice04.c)
add_executable(ProgrammingInC_c05_p_05 ProgrammingInC/chapter05/practice/practice05.c)
add_executable(ProgrammingInC_c05_p_07 ProgrammingInC/chapter05/practice/practice07.c)
add_executable(ProgrammingInC_c05_p_08 ProgrammingInC/chapter05/practice/practice08.c)
add_executable(ProgrammingInC_c05_p_11 ProgrammingInC/chapter05/practice/practice11.c)
add_executable(ProgrammingInC_c06_e_01 ProgrammingInC/chapter06/example/example01.c)
add_executable(ProgrammingInC_c06_e_02 ProgrammingInC/chapter06/example/example02.c)
add_executable(ProgrammingInC_c06_e_03 ProgrammingInC/chapter06/example/example03.c)
add_executable(ProgrammingInC_c06_e_04 ProgrammingInC/chapter06/example/example04.c)
add_executable(ProgrammingInC_c06_e_05 ProgrammingInC/chapter06/example/example05.c)
add_executable(ProgrammingInC_c06_e_06 ProgrammingInC/chapter06/example/example06.c)
add_executable(ProgrammingInC_c06_e_07 ProgrammingInC/chapter06/example/example07.c)
add_executable(ProgrammingInC_c06_e_08 ProgrammingInC/chapter06/example/example08.c)
add_executable(ProgrammingInC_c06_e_08_A ProgrammingInC/chapter06/example/example08_A.c)
add_executable(ProgrammingInC_c06_e_09 ProgrammingInC/chapter06/example/example09.c)
add_executable(ProgrammingInC_c06_e_10 ProgrammingInC/chapter06/example/example10.c)
add_executable(ProgrammingInC_c06_p_02 ProgrammingInC/chapter06/practice/practice02.c)
add_executable(ProgrammingInC_c06_p_03 ProgrammingInC/chapter06/practice/practice03.c)
add_executable(ProgrammingInC_c06_p_04 ProgrammingInC/chapter06/practice/practice04.c)
add_executable(ProgrammingInC_c06_p_05 ProgrammingInC/chapter06/practice/practice05.c)
add_executable(ProgrammingInC_c06_p_06 ProgrammingInC/chapter06/practice/practice06.c)
add_executable(ProgrammingInC_c07_e_01 ProgrammingInC/chapter07/example/example01.c)
add_executable(ProgrammingInC_c07_e_02 ProgrammingInC/chapter07/example/example02.c)
add_executable(ProgrammingInC_c07_e_03 ProgrammingInC/chapter07/example/example03.c)
add_executable(ProgrammingInC_c07_e_04 ProgrammingInC/chapter07/example/example04.c)
add_executable(ProgrammingInC_c07_e_05 ProgrammingInC/chapter07/example/example05.c)
add_executable(ProgrammingInC_c07_e_06 ProgrammingInC/chapter07/example/example06.c)
add_executable(ProgrammingInC_c07_e_07 ProgrammingInC/chapter07/example/example07.c)
add_executable(ProgrammingInC_c07_e_08 ProgrammingInC/chapter07/example/example08.c)
add_executable(ProgrammingInC_c07_p_03 ProgrammingInC/chapter07/practice/practice03.c)
add_executable(ProgrammingInC_c07_p_04 ProgrammingInC/chapter07/practice/practice04.c)
add_executable(ProgrammingInC_c07_p_05 ProgrammingInC/chapter07/practice/practice05.c)
add_executable(ProgrammingInC_c07_p_06 ProgrammingInC/chapter07/practice/practice06.c)
add_executable(ProgrammingInC_c07_p_07 ProgrammingInC/chapter07/practice/practice07.c)
add_executable(ProgrammingInC_c08_e_01 ProgrammingInC/chapter08/example/example01.c)
add_executable(ProgrammingInC_c08_e_02 ProgrammingInC/chapter08/example/example02.c)
add_executable(ProgrammingInC_c08_e_03 ProgrammingInC/chapter08/example/example03.c)
add_executable(ProgrammingInC_c08_e_04 ProgrammingInC/chapter08/example/example04.c)
add_executable(ProgrammingInC_c08_e_05 ProgrammingInC/chapter08/example/example05.c)
add_executable(ProgrammingInC_c08_e_06 ProgrammingInC/chapter08/example/example06.c)
add_executable(ProgrammingInC_c08_e_07 ProgrammingInC/chapter08/example/example07.c)
add_executable(ProgrammingInC_c08_e_08 ProgrammingInC/chapter08/example/example08.c)
add_executable(ProgrammingInC_c08_e_09 ProgrammingInC/chapter08/example/example09.c)
add_executable(ProgrammingInC_c08_e_10 ProgrammingInC/chapter08/example/example10.c)
add_executable(ProgrammingInC_c08_e_11 ProgrammingInC/chapter08/example/example11.c)
add_executable(ProgrammingInC_c08_e_12 ProgrammingInC/chapter08/example/example12.c)
add_executable(ProgrammingInC_c08_e_13 ProgrammingInC/chapter08/example/example13.c)
add_executable(ProgrammingInC_c08_e_13_A ProgrammingInC/chapter08/example/example13_A.c)
add_executable(ProgrammingInC_c08_e_14 ProgrammingInC/chapter08/example/example14.c)
add_executable(ProgrammingInC_c08_e_15 ProgrammingInC/chapter08/example/example15.c)
add_executable(ProgrammingInC_c08_e_16 ProgrammingInC/chapter08/example/example16.c)
add_executable(ProgrammingInC_c08_p_02 ProgrammingInC/chapter08/practice/practice02.c)
add_executable(ProgrammingInC_c08_p_03 ProgrammingInC/chapter08/practice/practice03.c)
add_executable(ProgrammingInC_c08_p_04 ProgrammingInC/chapter08/practice/practice04.c)
add_executable(ProgrammingInC_c08_p_05 ProgrammingInC/chapter08/practice/practice05.c)
add_executable(ProgrammingInC_c08_p_06 ProgrammingInC/chapter08/practice/practice06.c)
add_executable(ProgrammingInC_c08_p_07 ProgrammingInC/chapter08/practice/practice07.c)
add_executable(ProgrammingInC_c08_p_08 ProgrammingInC/chapter08/practice/practice08.c)
add_executable(ProgrammingInC_c08_p_09 ProgrammingInC/chapter08/practice/practice09.c)
add_executable(ProgrammingInC_c08_p_10 ProgrammingInC/chapter08/practice/practice10.c)
add_executable(ProgrammingInC_c08_p_11 ProgrammingInC/chapter08/practice/practice11.c)
add_executable(ProgrammingInC_c08_p_12 ProgrammingInC/chapter08/practice/practice12.c)
add_executable(ProgrammingInC_c08_p_13 ProgrammingInC/chapter08/practice/practice13.c)
add_executable(ProgrammingInC_c08_p_16 ProgrammingInC/chapter08/practice/practice16.c)
add_executable(ProgrammingInC_c09_e_01 ProgrammingInC/chapter09/example/example01.c)
add_executable(ProgrammingInC_c09_e_02 ProgrammingInC/chapter09/example/example02.c)
add_executable(ProgrammingInC_c09_e_03 ProgrammingInC/chapter09/example/example03.c)
add_executable(ProgrammingInC_c09_e_04 ProgrammingInC/chapter09/example/example04.c)
add_executable(ProgrammingInC_c09_e_05 ProgrammingInC/chapter09/example/example05.c)
add_executable(ProgrammingInC_c09_e_06 ProgrammingInC/chapter09/example/example06.c)
add_executable(ProgrammingInC_c09_e_07 ProgrammingInC/chapter09/example/example07.c)
add_executable(ProgrammingInC_c09_p_02 ProgrammingInC/chapter09/practice/practice02.c)
add_executable(ProgrammingInC_c09_p_03 ProgrammingInC/chapter09/practice/practice03.c)
add_executable(ProgrammingInC_c09_p_04 ProgrammingInC/chapter09/practice/practice04.c)
add_executable(ProgrammingInC_c09_p_05 ProgrammingInC/chapter09/practice/practice05.c)
add_executable(ProgrammingInC_c09_p_06 ProgrammingInC/chapter09/practice/practice06.c)
add_executable(ProgrammingInC_c10_e_01 ProgrammingInC/chapter10/example/example01.c)
add_executable(ProgrammingInC_c10_e_02 ProgrammingInC/chapter10/example/example02.c)
add_executable(ProgrammingInC_c10_e_03 ProgrammingInC/chapter10/example/example03.c)
add_executable(ProgrammingInC_c10_e_04 ProgrammingInC/chapter10/example/example04.c)
add_executable(ProgrammingInC_c10_e_05 ProgrammingInC/chapter10/example/example05.c)
add_executable(ProgrammingInC_c10_e_06 ProgrammingInC/chapter10/example/example06.c)
add_executable(ProgrammingInC_c10_e_07 ProgrammingInC/chapter10/example/example07.c)
add_executable(ProgrammingInC_c10_e_08 ProgrammingInC/chapter10/example/example08.c)
add_executable(ProgrammingInC_c10_e_09 ProgrammingInC/chapter10/example/example09.c)
add_executable(ProgrammingInC_c10_e_10 ProgrammingInC/chapter10/example/example10.c)
add_executable(ProgrammingInC_c10_e_11 ProgrammingInC/chapter10/example/example11.c)
add_executable(ProgrammingInC_c10_p_03 ProgrammingInC/chapter10/practice/practice03.c)
add_executable(ProgrammingInC_c10_p_04 ProgrammingInC/chapter10/practice/practice04.c)
add_executable(ProgrammingInC_c10_p_05 ProgrammingInC/chapter10/practice/practice05.c)
add_executable(ProgrammingInC_c10_p_06 ProgrammingInC/chapter10/practice/practice06.c)
add_executable(ProgrammingInC_c10_p_07 ProgrammingInC/chapter10/practice/practice07.c)
add_executable(ProgrammingInC_c10_p_08 ProgrammingInC/chapter10/practice/practice08.c)
add_executable(ProgrammingInC_c10_p_10 ProgrammingInC/chapter10/practice/practice10.c)
add_executable(ProgrammingInC_c10_p_11 ProgrammingInC/chapter10/practice/practice11.c)
add_executable(ProgrammingInC_c10_p_12 ProgrammingInC/chapter10/practice/practice12.c)
add_executable(ProgrammingInC_c10_p_13 ProgrammingInC/chapter10/practice/practice13.c)
add_executable(ProgrammingInC_c10_p_14 ProgrammingInC/chapter10/practice/practice14.c)
add_executable(ProgrammingInC_c11_e_01 ProgrammingInC/chapter11/example/example01.c)
add_executable(ProgrammingInC_c11_e_02 ProgrammingInC/chapter11/example/example02.c)
add_executable(ProgrammingInC_c11_e_03 ProgrammingInC/chapter11/example/example03.c)
add_executable(ProgrammingInC_c11_e_04 ProgrammingInC/chapter11/example/example04.c)
add_executable(ProgrammingInC_c11_e_05 ProgrammingInC/chapter11/example/example05.c)
add_executable(ProgrammingInC_c11_e_06 ProgrammingInC/chapter11/example/example06.c)
add_executable(ProgrammingInC_c11_e_07 ProgrammingInC/chapter11/example/example07.c)
add_executable(ProgrammingInC_c11_e_08 ProgrammingInC/chapter11/example/example08.c)
add_executable(ProgrammingInC_c11_e_09 ProgrammingInC/chapter11/example/example09.c)
add_executable(ProgrammingInC_c11_e_10 ProgrammingInC/chapter11/example/example10.c)
